--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -1,136 +1,111 @@
-name: SafeDeploy DevSecOps CI/CD
+name: CI/CD & DevSecOps Pipeline
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
 
 env:
-  IMAGE_NAME: ghcr.io/${{ github.repository }}:latest
-  STAGING_URL: https://staging.example.com
+  SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  DEFECTDOJO_API_KEY: ${{ secrets.DEFECTDOJO_API_KEY }}
+  DEFECTDOJO_URL: ${{ secrets.DEFECTDOJO_URL }}
+  DEFECTDOJO_ENGAGEMENT_ID: ${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}
 
 jobs:
-
-  ################################
-  # Pre-Build Stage
-  ################################
-  prebuild:
-    name: Pre-Build Security Checks
+  devsecops:
+    name: DevSecOps Security Analysis
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: SCA - Snyk
-        uses: snyk/actions/node@master
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@v2
+        with:
+          projectBaseDir: .
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
+
+      - name: Snyk Vulnerability Scan
+        uses: snyk/actions@v1
         with:
-          args: test --severity-threshold=high
-
-      - name: SBOM - CycloneDX
-        run: |
-          npm install -g @cyclonedx/bom
-          cyclonedx-bom -o bom.xml
-
-      - name: SAST - CodeQL Init
-        uses: github/codeql-action/init@v3
-        with:
-          languages: ['javascript']
-
-      - name: SAST - CodeQL Analyze
-        uses: github/codeql-action/analyze@v3
-
-      - name: IaC Scan - Checkov
-        uses: bridgecrewio/checkov-action@v12
-        with:
-          directory: .
-
-  ################################
-  # Build Stage
-  ################################
-  build:
-    name: Build Container Image
-    runs-on: ubuntu-latest
-    needs: prebuild
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Docker login
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          command: test
+        env:
+          SNYK_TOKEN: ${{ env.SNYK_TOKEN }}
 
       - name: Build Docker Image
-        run: docker build -t $IMAGE_NAME .
+        run: |
+          cd services/order/
+          docker build -t my-app:latest .
 
-      - name: Push Docker Image
-        run: docker push $IMAGE_NAME
-
-  ################################
-  # Test Stage
-  ################################
-  test:
-    name: Test & Scan
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Unit Tests
-        run: npm test
-
-      - name: Code Coverage
-        run: npm run coverage
-
-      - name: Integration Tests
-        run: npm run integration
-
-      - name: Image Scan - Trivy
+      - name: Trivy Scan
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.IMAGE_NAME }}
-          exit-code: 1
-          format: 'table'
-          severity: 'HIGH,CRITICAL'
+          image-ref: my-app:latest
+          format: json
+          output: trivy-report.json
 
-      - name: DAST - OWASP ZAP
-        uses: zaproxy/action-baseline@v0.10.0
-        with:
-          target: ${{ env.STAGING_URL }}
-
-  ################################
-  # Release Stage
-  ################################
-  release:
-    name: Release and Notify
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: GitOps Trigger (Placeholder)
-        run: echo "Trigger ArgoCD/FluxCD here"
-
-      - name: Notify Slack
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          payload: |
-            {
-              "text": "✅ Deployment pipeline successful for `${{ github.repository }}` on `${{ github.ref_name }}`"
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-      - name: Notify Discord
+      - name: Upload Trivy Report to DefectDojo
         run: |
-          curl -H "Content-Type: application/json" \
-               -X POST \
-               -d '{"content": "✅ Deployment pipeline successful!"}' \
-               ${{ secrets.DISCORD_WEBHOOK }}
+          curl -X POST "${DEFECTDOJO_URL}/api/v2/import-scan/" \
+            -H "Authorization: Token ${DEFECTDOJO_API_KEY}" \
+            -F 'file=@trivy-report.json' \
+            -F 'engagement=${DEFECTDOJO_ENGAGEMENT_ID}' \
+            -F 'scan_type=Container Scan' \
+            -F 'active=true' \
+            -F 'verified=true' \
+            -F 'auto_create_context=true'
+
+      - name: DevSecOps Complete
+        run: echo "✅ DevSecOps security scans and reporting complete."
+
+  build_and_deploy:
+    name: Build & Deploy Order Service
+    runs-on: ubuntu-latest
+    needs: devsecops
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Docker Hub Login
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build Order Service Docker Image
+        run: |
+          cd services/order/
+          docker build \
+            --build-arg SERVICE_NAME=order \
+            --build-arg APP_VERSION=${{ github.sha }} \
+            --build-arg ENV=production \
+            -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}-order-service:latest \
+            -f Dockerfile.prod .
+
+      - name: Push Image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}-order-service:latest
+
+      - name: Install SSH Key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DIGITALOCEAN_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Add Droplet to Known Hosts
+        run: ssh-keyscan ${{ secrets.SERVER_IP_ADDRESS }} >> ~/.ssh/known_hosts
+
+      - name: Deploy to Droplet
+        run: |
+          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP_ADDRESS }} "
+            docker service update --force \
+              --image ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}-order-service:latest \
+              services_order &&
+            docker image prune -a -f
+          "
