--- a/tools/SonarQube/docker-compose.yml
+++ b/tools/SonarQube/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   sonarqube:
-    image: sonarqube:developer
+    image: sonarqube:latest
     container_name: sonarqube
     depends_on:
       - db
