--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -49,7 +49,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --all-projects --json-file-output=snyk-results.json
+          args: --json-file-output=snyk-results.json
 
       - name: 💾 Upload Snyk JSON results (for DefectDojo or review)
         uses: actions/upload-artifact@v4
