--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -36,20 +36,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 📦 Jump to python app
-        run: |
-          cd apps/simple-flask
-          echo "Current directory: $(pwd)"
-          echo "Contents of the directory:"
-          ls -la
-
       - name: 🔍 Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --json-file-output=snyk-results.json
+          args: test apps/simple-flask/requirements.txt --json-file-output=snyk-results.json
 
       - name: 💾 Upload Snyk JSON results (for DefectDojo or review)
         uses: actions/upload-artifact@v4
