--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -54,3 +54,47 @@ jobs:
         run: |
           echo "Snyk results:"
           cat snyk-results.json
+
+  build_image:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📥 Checkout Code for Building
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: 🐳 Build Docker Image
+        run: |
+          docker build -t myapp:latest .
+          echo "Docker image built successfully."
+      
+  image_scanning:
+    name: Image Scanning with Trivy
+    runs-on: ubuntu-latest
+    needs: build_image
+    steps:
+      - name: 📥 Checkout Code for Scanning
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: 🔍 Scan Docker Image with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: myapp:latest
+          format: 'json'
+          output: 'trivy-results.json'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 💾 Upload Trivy JSON results (for DefectDojo or review)
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-json
+          path: trivy-results.json
+      
+      - name: 📤 Logging Trivy results
+        run: |
+          echo "Trivy results:"
+          cat trivy-results.json
