--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -89,3 +89,13 @@ jobs:
         run: |
           echo "Trivy results:"
           cat trivy-results.json
+
+  upload_results:
+    name: Upload Results to DefectDojo
+    runs-on: ubuntu-latest
+    needs: [static_application_security_testing, software_composition_analysis, build_and_scan]
+    steps:
+      - name: 📥 Checkout Code for Uploading Results
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
