--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: 📋 Fetch SonarQube Report
         run: |
+          mkdir -p reports
           curl -u ${{ secrets.SONAR_TOKEN }}: \
           "${{ secrets.SONAR_HOST_URL }}/api/measures/component?component=${{ secrets.SONAR_PROJECT_KEY }}&metricKeys=bugs,vulnerabilities,code_smells" \
           -o reports/sonarqube-report.json
