--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -125,6 +125,7 @@ jobs:
 
       - name: 📤 Upload SonarQube Report to DefectDojo
         run: |
+          scan_date=$(date +%Y-%m-%d)
           curl -X POST "${{ secrets.DEFECTDOJO_API_URL }}" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
             -F 'scan_type=SonarQube Scan' \
@@ -133,11 +134,12 @@ jobs:
             -F 'minimum_severity=Low' \
             -F 'active=true' \
             -F 'verified=true' \
-            -F 'scan_date=$(date +%F)' \
+            -F "scan_date=${scan_date}" \
             -F 'product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}'
 
       - name: 📤 Upload Snyk Report to DefectDojo
         run: |
+          scan_date=$(date +%Y-%m-%d)
           curl -X POST "${{ secrets.DEFECTDOJO_API_URL }}" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
             -F 'scan_type=Snyk Scan' \
@@ -146,18 +148,19 @@ jobs:
             -F 'minimum_severity=Low' \
             -F 'active=true' \
             -F 'verified=true' \
-            -F 'scan_date=$(date +%F)' \
+            -F "scan_date=${scan_date}" \
             -F 'product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}'
 
       - name: 📤 Upload Trivy Report to DefectDojo
         run: |
+          scan_date=$(date +%Y-%m-%d)
           curl -X POST "${{ secrets.DEFECTDOJO_API_URL }}" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
-            -F 'scan_type=Container Scan (Trivy)' \
+            -F 'scan_type=Trivy Scan' \
             -F 'file=@reports/trivy-results.json' \
             -F 'engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}' \
             -F 'minimum_severity=Low' \
             -F 'active=true' \
             -F 'verified=true' \
-            -F 'scan_date=$(date +%F)' \
+            -F "scan_date=${scan_date}" \
             -F 'product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}'
