--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@ sonar.projectKey=Sec-VDT
 sonar.projectName=Sec-VDT
 sonar.projectVersion=1.0
 sonar.sources=.
+sonar.language=python
+sonar.python.version=3.11
