--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -36,12 +36,17 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
+      - name: Log SonarQube Report
+        run: |
+          echo "SonarQube Report:"
+          cat reports/sonarqube-report.json
+
       - name: 💾 Upload SonarQube JSON results
         uses: actions/upload-artifact@v4
         with:
           name: sonarqube-json
           path: reports/sonarqube-report.json
-
+      
   software_composition_analysis:
     name: SCA - Snyk Testing
     runs-on: ubuntu-latest
@@ -132,8 +137,6 @@ jobs:
             -F 'file=@reports/sonarqube-report.json' \
             -F 'engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}' \
             -F 'minimum_severity=Low' \
-            -F 'active=true' \
-            -F 'verified=true' \
             -F "scan_date=${scan_date}" \
             -F 'product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}'
 
@@ -146,8 +149,6 @@ jobs:
             -F 'file=@reports/snyk-results.json' \
             -F 'engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}' \
             -F 'minimum_severity=Low' \
-            -F 'active=true' \
-            -F 'verified=true' \
             -F "scan_date=${scan_date}" \
             -F 'product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}'
 
@@ -160,7 +161,5 @@ jobs:
             -F 'file=@reports/trivy-results.json' \
             -F 'engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}' \
             -F 'minimum_severity=Low' \
-            -F 'active=true' \
-            -F 'verified=true' \
             -F "scan_date=${scan_date}" \
             -F 'product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}'
