--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -26,21 +26,23 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-      - name: 📋 Fetch SonarQube Report
+      - name: 📦 Run SonarQube and Export XML
         run: |
-          mkdir -p reports
-          curl -u ${{ secrets.SONAR_TOKEN }}: \
-          "${{ secrets.SONAR_HOST_URL }}/api/measures/component?component=${{ secrets.SONAR_PROJECT_KEY }}&metricKeys=bugs,vulnerabilities,code_smells" \
-          -o reports/sonarqube-report.json
+          sonar-scanner \
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.report.export.path=sonar-report.xml
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-      - name: 💾 Upload SonarQube JSON results
+      - name: 💾 Upload SonarQube XML results
         uses: actions/upload-artifact@v4
         with:
-          name: sonarqube-json
-          path: reports/sonarqube-report.json
+          name: sonarqube-xml
+          path: sonar-report.xml
       
   software_composition_analysis:
     name: SCA - Snyk Testing
@@ -128,8 +130,8 @@ jobs:
           scan_date=$(date +%Y-%m-%d)
           curl -X POST "${{ secrets.DEFECTDOJO_API_URL }}" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
-            -F 'scan_type=SonarQube API Import' \
-            -F 'file=@reports/sonarqube-report.json' \
+            -F 'scan_type=SonarQube Scan \
+            -F 'file=@reports/sonar-report.xml' \
             -F 'engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}' \
             -F 'minimum_severity=Low' \
             -F "scan_date=${scan_date}" \
