--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -16,7 +16,7 @@ jobs:
     permissions: read-all
     steps:
       - name: 📥 Checkout Code for Testing
-        uses: actions/checkout@v4 # Updated to latest version
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
@@ -25,39 +25,30 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        with:
-          args: >
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.sources=.
-            -Dsonar.report.export.path=sonar-report.xml
-            -Dsonar.working.directory=.scannerwork
 
-      - name: 🛠 Debug Check SonarQube Report
+      - name: 📋 Fetch SonarQube Report
         run: |
-          echo "Listing files in workspace:"
-          ls -la
-          echo "Checking for sonar-report.xml:"
-          if [ -f sonar-report.xml ]; then
-            echo "✅ sonar-report.xml found"
-          else
-            echo "❌ sonar-report.xml not found"
-            exit 1
-          fi
+          mkdir -p reports
+          curl -u ${{ secrets.SONAR_TOKEN }}: \
+          "${{ secrets.SONAR_HOST_URL }}/api/measures/component?component=${{ secrets.SONAR_PROJECT_KEY }}&metricKeys=bugs,vulnerabilities,code_smells" \
+          -o reports/sonarqube-report.json
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-      - name: 💾 Upload SonarQube XML results
+      - name: 💾 Upload SonarQube JSON results
         uses: actions/upload-artifact@v4
         with:
-          name: sonarqube-xml
-          path: sonar-report.xml
-        if: always() # Upload even if previous steps fail for debugging
-
+          name: sonarqube-json
+          path: reports/sonarqube-report.json
+      
   software_composition_analysis:
     name: SCA - Snyk Testing
     runs-on: ubuntu-latest
     permissions: read-all
     steps:
       - name: 📥 Checkout Code for Testing
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
@@ -80,7 +71,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
@@ -110,14 +101,14 @@ jobs:
     needs: [static_application_security_testing, software_composition_analysis, build_and_scan]
     steps:
       - name: 📥 Checkout Code for Uploading Results
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
       - name: 📥 Download SonarQube Artifact
         uses: actions/download-artifact@v4
         with:
-          name: sonarqube-xml
+          name: sonarqube-json
           path: reports/
 
       - name: 📥 Download Snyk Artifact
@@ -137,33 +128,33 @@ jobs:
           scan_date=$(date +%Y-%m-%d)
           curl -X POST "${{ secrets.DEFECTDOJO_API_URL }}" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
-            -F "scan_type=SonarQube Scan" \
-            -F "file=@reports/sonar-report.xml" \
-            -F "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
-            -F "minimum_severity=Low" \
+            -F 'scan_type=SonarQube API Import' \
+            -F 'file=@reports/sonarqube-report.json' \
+            -F 'engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}' \
+            -F 'minimum_severity=Low' \
             -F "scan_date=${scan_date}" \
-            -F "product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}"
+            -F 'product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}'
 
       - name: 📤 Upload Snyk Report to DefectDojo
         run: |
           scan_date=$(date +%Y-%m-%d)
           curl -X POST "${{ secrets.DEFECTDOJO_API_URL }}" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
-            -F "scan_type=Snyk Scan" \
-            -F "file=@reports/snyk-results.json" \
-            -F "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
-            -F "minimum_severity=Low" \
+            -F 'scan_type=Snyk Scan' \
+            -F 'file=@reports/snyk-results.json' \
+            -F 'engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}' \
+            -F 'minimum_severity=Low' \
             -F "scan_date=${scan_date}" \
-            -F "product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}"
+            -F 'product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}'
 
       - name: 📤 Upload Trivy Report to DefectDojo
         run: |
           scan_date=$(date +%Y-%m-%d)
           curl -X POST "${{ secrets.DEFECTDOJO_API_URL }}" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
-            -F "scan_type=Trivy Scan" \
-            -F "file=@reports/trivy-results.json" \
-            -F "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
-            -F "minimum_severity=Low" \
+            -F 'scan_type=Trivy Scan' \
+            -F 'file=@reports/trivy-results.json' \
+            -F 'engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}' \
+            -F 'minimum_severity=Low' \
             -F "scan_date=${scan_date}" \
-            -F "product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}"
+            -F 'product_name=${{ secrets.DEFECTDOJO_PRODUCT_NAME }}'
