--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -26,21 +26,22 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-      - name: 📋 Fetch SonarQube Report
+      - name: 📥 Download SonarQube Issues via API
         run: |
           mkdir -p reports
-          curl -u ${{ secrets.SONAR_TOKEN }}: \
-          "${{ secrets.SONAR_HOST_URL }}/api/measures/component?component=${{ secrets.SONAR_PROJECT_KEY }}&metricKeys=bugs,vulnerabilities,code_smells" \
-          -o reports/sonarqube-report.json
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          curl -s -u "${{ secrets.SONAR_TOKEN }}:" \
+          "${{ secrets.SONAR_HOST_URL }}/api/issues/search?componentKeys=${{ secrets.SONAR_PROJECT_KEY }}&resolved=false" \
+          -o reports/sonarqube-issues.json
 
-      - name: 💾 Upload SonarQube JSON results
+      - name: 📦 Convert SonarQube JSON to DefectDojo Generic Format
+        run: |
+          python3 convert_sonar_to_defectdojo.py
+
+      - name: 💾 Upload Converted SonarQube Report
         uses: actions/upload-artifact@v4
         with:
-          name: sonarqube-json
-          path: reports/sonarqube-report.json
+          name: converted-sonarqube-report
+          path: converted-report.json
       
   software_composition_analysis:
     name: SCA - Snyk Testing
@@ -108,7 +109,7 @@ jobs:
       - name: 📥 Download SonarQube Artifact
         uses: actions/download-artifact@v4
         with:
-          name: sonarqube-json
+          name: converted-sonarqube-report
           path: reports/
 
       - name: 📥 Download Snyk Artifact
@@ -128,8 +129,8 @@ jobs:
           scan_date=$(date +%Y-%m-%d)
           curl -X POST "${{ secrets.DEFECTDOJO_API_URL }}" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
-            -F 'scan_type=SonarQube API Import' \
-            -F 'file=@reports/sonarqube-report.json' \
+            -F 'scan_type=Generic Findings Import' \
+            -F 'file=@reports/converted-report.json' \
             -F 'engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}' \
             -F 'minimum_severity=Low' \
             -F "scan_date=${scan_date}" \
