--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,5 @@ sonar.projectVersion=1.0
 sonar.sources=.
 sonar.language=python
 sonar.python.version=3.11
+# sonar.inclusions=.py
+# sonar.exclusions=**/test/**
