--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
     
       - name: Build Docker Image
         run: |
-          docker build -t safedeploy:latest .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/safedeploy:latest -f Dockerfile .
     
       - name: Push Docker Image to Docker Hub
         run: |
