--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,7 +64,7 @@ jobs:
         uses: zaproxy/action-full-scan@v0.9.0
         with:
             target: '${{ secrets.SERVER_API }}'
-            cmd_options: '-r zap-report.html -x zap-report.xml'  # `-x` generates XML report
+            cmd_options: '-x zap-report.xml'  # `-x` generates XML report
         continue-on-error: true  # In case ZAP finds issues, don't fail pipeline
 
       - name: 💾 Upload ZAP XML Report as Artifact
