--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,10 @@
 name: CI/CD & Security Test Pipeline
 
 on:
-  pull_request:
+  push:
     branches:
       - test
-    types: [opened, synchronize, reopened]
-
+  
 jobs:
   build_and_deploy:
     name: Build and Deploy Application
