--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,7 @@ jobs:
   dynamic_application_security_testing:
     name: DAST - OWASP ZAP Testing
     needs: [build_and_deploy]
+    permissions: read-all
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout Code for Testing
@@ -56,17 +57,17 @@ jobs:
           fetch-depth: 0
 
       - name: 🔍 Run OWASP ZAP Dynamic Testing (with XML Output)
-        uses: zaproxy/action-full-scan@v0.9.0
-        with:
-            target: '${{ secrets.SERVER_API }}'
-            cmd_options: '-x zap-report.xml'  # `-x` generates XML report
+        run: |
+            mkdir -p reports
+            docker run -v $(pwd)/reports:/zap/wrk/:rw -t owasp/zap2docker-stable zap-full-scan.py \
+            -t ${{ secrets.SERVER_API }} -x zap-report.xml
         continue-on-error: true  # In case ZAP finds issues, don't fail pipeline
 
       - name: 💾 Upload ZAP XML Report as Artifact
         uses: actions/upload-artifact@v4
         with:
             name: zap-xml
-            path: zap-report.xml
+            path: reports/zap-report.xml
 
   upload_results:
     name: Upload Results to DefectDojo
