--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,8 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: ${{secrets.SERVER_API}} # Replace with your target URL
           cmd_options: '-x report.xml' # Generate XML report
-
+          issue_title: '' # Disable issue creation by setting empty title
+          fail_action: false # Prevent workflow failure if issues can't be created
 
       - name: Upload XML Report
         uses: actions/upload-artifact@v4
