--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,7 +64,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: ${{ secrets.SERVER_API }}
-          cmd_options: '-x report.xml -u urls.txt'
+          cmd_options: '-x report.xml -t https://api.sec-vdt.duckdns.org/login'
           issue_title: ''
           fail_action: false
           allow_issue_writing: false
